<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    tools:context=".MainActivity">





    <EditText
        android:id="@+id/editText"
        android:layout_width="2in"
        android:layout_height="wrap_content"
        android:hint="Enter a message"
        android:inputType="text"/>

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/editText"
        android:text="SEND" />


    <Button
        android:id="@+id/voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:text="VOICE INPUT"
        android:onClick="voiceMessage"/>

</RelativeLayout>