<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/secondActivity"
    tools:context=".MainActivity2">

    <EditText
        android:id="@+id/p_e"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter a phone number or an email address"
        android:inputType="text"/>


    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/p_e"
        android:layout_centerHorizontal="true"
        android:text="confirm" />


</RelativeLayout>